--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=modeler1
+spring.datasource.password=modeler1
+spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
 
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=true
+spring.jpa.database=oracle
+spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+
+logging.level.org.hibernate=info
